# axolotl

./: .gitignore  README.md  axolotl.cabal  build.sh  example.axl  factorial.axl  hie.yaml  stdlib.js
.github/workflows/: haskell.yml
src/: Main.hs
src/Analyser/: Analyser.hs  Util.hs
src/Analyser/Analysers/: ArbitraryBlock.hs  Array.hs  Conditional.hs  FunctionCall.hs  FunctionDef.hs  VariableDef.hs
src/Evaluator/: Evaluator.hs  NativeFns.hs
src/Evaluator/Evaluators/: FunctionCall.hs  UnaryOp.hs  VariableUsage.hs
src/Parser/: Ast.hs  Combinators.hs  Parser.hs
src/Sugar/: Sugar.hs
src/Transpiler/: Transpiler.hs  Util.hs
src/Transpiler/Backends/JS/: JS.hs  stdlib.js
stdlib/: math.axl  stdlib.axl
