cabal-version:      2.4

name:               axolotl
version:            0.1.5.0
synopsis:           a statically typed lisp-like programming language
author:             Udit Karode <udit.karode@gmail.com>
category:           Language
bug-reports:        https://github.com/uditkarode/axolotl-lang/issues
maintainer:         Udit Karode <udit.karode@gmail.com>

license:        GPL-3.0-or-later
license-file:   LICENSE

executable axl
    main-is:          Main.hs

    other-modules:    Parser.Ast
                    , Parser.Combinators
                    , Parser.Parser
                    , Analyser.Analyser
                    , Analyser.Analysers.ArbitraryBlock
                    , Analyser.Analysers.Array
                    , Analyser.Analysers.Conditional
                    , Analyser.Analysers.FunctionCall
                    , Analyser.Analysers.FunctionDef
                    , Analyser.Analysers.VariableDef
                    , Analyser.Util
                    , Evaluator.Evaluator
                    , Evaluator.NativeFns
                    , Paths_axolotl

    build-depends:    base ^>=4.14.2.0
                    , unordered-containers
                    , string-conversions
                    , pretty-terminal
                    , pretty-simple
                    , megaparsec
                    , hashtables
                    , either
                    , text
                    , mtl
    hs-source-dirs:   src
    default-extensions: OverloadedStrings
                      , LambdaCase
                      , BlockArguments
    default-language: Haskell2010
