cabal-version:        2.4

name:                 axolotl
version:              0.3.0.0
synopsis:             a statically typed lisp-like programming language
author:               Udit Karode <udit.karode@gmail.com>
category:             Language
bug-reports:          https://github.com/uditkarode/axolotl-lang/issues
maintainer:           Udit Karode <udit.karode@gmail.com>

license:              GPL-3.0-or-later
license-file:         LICENSE

executable axl
    main-is:          Main.hs

    other-modules:    
                   -- Parser 
                      Parser.Ast
                    , Parser.Combinators
                    , Parser.Parser
                   -- Analyser
                    , Analyser.Analyser
                    , Analyser.Analysers.ArbitraryBlock
                    , Analyser.Analysers.Array
                    , Analyser.Analysers.Conditional
                    , Analyser.Analysers.FunctionCall
                    , Analyser.Analysers.FunctionDef
                    , Analyser.Analysers.VariableDef
                    , Analyser.Util
                   -- Evaluator
                    , Evaluator.Evaluator
                    , Evaluator.NativeFns
                    , Evaluator.Evaluators.FunctionCall
                    , Evaluator.Evaluators.UnaryOp
                    , Evaluator.Evaluators.VariableUsage
                   -- Transpiler
                    , Transpiler.Transpiler
                    , Transpiler.Util
                    , Transpiler.Backends.JS.JS
                   -- Desugarer
                    , Sugar.Sugar
                   -- Miscellaneous
                    , Paths_axolotl

    build-depends:    base ^>=4.15.0.0
                    , string-conversions
                    , pretty-terminal
                    , pretty-simple
                    , file-embed
                    , megaparsec
                    , hashtables
                    , text-show
                    , either
                    , clock
                    , text
                    , mtl

    hs-source-dirs:   src

    default-extensions: OverloadedStrings
                      , LambdaCase
                      , BlockArguments

    default-language: Haskell2010
